--- a/content/en/index.html
+++ b/content/en/index.html
@@ -5,12 +5,7 @@ class: main-title
 created:
 ---
 
-I am Vincent Bernat and I live in Paris. I am a fond user of GNU/Linux
-since 1999. I am involved in [various free projects][projects],
-essentially written in C or Python. I happen to be a
-[Debian Developer][debian]. I am also some kind of network
-expert. This website is mostly my [blog][blog], which content is
-usually technical.
+I'm Tanglim LUA, from Southern China and now live in Hangzhou, work for Netease. Here are some words to record what I've done and what I was thinking these years. It is worth taking my seven years in the university, because I found my dear at last year. Now and future, whatever I [do][projects] is for her.
 
 [projects]: [[en/projects.html]]
 [blog]: [[en/blog/]]
