--- a/content/index.html
+++ b/content/index.html
@@ -6,10 +6,7 @@ class: main-title
 created:
 ---
 
-We are currently experiencing some difficulties. Please choose the
-appropriate language to continue. ❦ Nous rencontrons actuellement
-quelques difficultés. Merci de choisir la langue que vous souhaitez
-utiliser.
+Maybe, there's someday, I can write some words here. But now, it's a wasteland.
 
 {% for code, lang in languages %}
   * [{{lang}}]({{ content_url(code) }})
