--- a/content/en/index.html
+++ b/content/en/index.html
@@ -1,6 +1,6 @@
 ---
-keywords: "vincent bernat, python, réseau, devops"
-uuid: f0acd127-88d0-4044-a9f6-f57c0b9d9d3b
+keywords: "performance testing, server tuning, gis, share software"
+uuid: EEB04DFB-0552-44C8-BA10-A70340441A1F
 class: main-title
 created:
 ---
