Fix date problems

--- a/content/cn/2014-read-cc2e.html
+++ b/content/cn/2014-read-cc2e.html
@@ -14,8 +14,8 @@ tags:
  
  最近才看完第2部分：创建高质量的代码部分。
  
- 1. Lay the Foundation
- ---
+ # 1. Lay the Foundation
+ 
  第一部分主要讲的是软件构建的基础，分为4个章节，从软件构建的基础知识、到软件构建中的专业术语、
 编写代码之前应该做什么事情、到准备开始动手开干。软件构建的基础知识我记得在本科毕业的时候想要进实验室曾经给自己下的一个任务，可是这么多年过去了，直到最近读这本书才想起来。比较系统的了解还是在进入公司之后，在看公司的一些文档才有了一个大致的了解。
 
@@ -24,6 +24,8 @@ tags:
 后来进了公司之后，发现公司里有点过了，可能为了明确责任吧，经常一个需求讨论挺久的。由于我所在的部门不是产品部门，这些其实也接触较少，唉，这涉及到另外一个话题了。现在有时候在后悔当初来这个岗位的决定，其实不太适合我，虽然我有信心做好，但会浪费很多时间。希望这段时间不是被我浪费，而是作为成为认真成长的一个阶段吧。
 
 最近在开发 [Grinder][grinder] 的一个插件，用来控制并发的，蛮简单的一个，过程设计之类的就放在另外一个地方吧，反正这个挺简单的。
+
+# TODO
 
 *[科研类型]: 合作骗钱
 
