--- a/content/cn/404.html
+++ b/content/cn/404.html
@@ -2,7 +2,7 @@
 title: "404: Impossible de trouver cette page"
 uuid: 87e754d6-0853-4a85-a154-849aec4a72b1
 author: Votre dévoué serveur web
-created:
+listable: false
 ---
 ![404 error][1]
 
