--- a/content/cn/about.html
+++ b/content/cn/about.html
@@ -2,13 +2,13 @@
 keywords: "性能测试, 互联网, GIS, 自动化测试"
 uuid: 663ADE30-75D4-42D4-A8E6-0BBA6F2F95B3
 class: main-title
-created:
+listable: false
 ---
 
 闽南人，带着浓厚的地瓜腔。大叔年纪研究生毕业，ZJU待了7年，曾经地质工程，整天做着与此不相干的事情。如今在养猪场做性能测试，虽说 testing， coding 不曾荒废。依然幻想仗剑走天涯，碧血黄沙梦驼铃，目前只可能老死江南烟雨中。我[所有的努力][blog]，献给我的[女朋友](http://graceyoung.lofter.com/)！
 
 [projects]: projets.html
-[blog]: blog/
+[blog]: #
 
 ![春江水暖鸭先知][1]
 
