--- a/content/cn/projects.html
+++ b/content/cn/projects.html
@@ -2,23 +2,19 @@
 title: Projects
 keywords: "github"
 uuid: 2d33c4ab-0986-4815-87c9-8833aa1eb144
+listable: false
 ---
 未来，如果有什么项目，都会放在 
 [GitHub](https://github.com/goby) 上. :
 
 
 
-{% from "macros.j2" import listing with context %}
-{{ listing("files/lldpd") }}
+---{% from "macros.j2" import listing with context %}
+---{{ listing("files/lldpd") }}
 
 目前正在开发 [grinder][1] 的插件以及 zmaply 两个，都还没开始所以。。。
 
 [1]: http://grinder.sourceforge.net/
-[2]: http://fr.wikipedia.org/wiki/Link_Layer_Discovery_Protocol
-[3]: http://fr.wikipedia.org/wiki/Cisco_Discovery_Protocol
-[4]: https://github.com/vincentbernat/wiremaps/wiki
-[5]: http://www.netdisco.org
-[6]: https://github.com/vincentbernat/snimpy
 
 {# Local Variables: #}
 {# mode: markdown   #}
