--- a/content/cn/about.html
+++ b/content/cn/about.html
@@ -5,7 +5,10 @@ class: main-title
 listable: false
 ---
 
-闽南人，带着浓厚的地瓜腔。大叔年纪研究生毕业，ZJU待了7年，曾经地质工程，整天做着与此不相干的事情。如今在养猪场做性能测试，虽说 testing， coding 不曾荒废。依然幻想仗剑走天涯，碧血黄沙梦驼铃，目前只可能老死江南烟雨中。我[所有的努力][blog]，献给我的[女朋友](http://graceyoung.lofter.com/)！
+闽南人，带着浓厚的地瓜腔。大叔年纪研究生毕业，ZJU待了7年，
+曾经地质工程，整天做着与此不相干的事情。如今在养猪场做性能测试，
+虽说 testing， coding 不曾荒废。依然幻想仗剑策马走天涯，碧血黄沙伴驼铃。
+我[所有的努力][blog]，献给我的<del>女朋友</del> [老婆](http://graceyoung.com)啦！
 
 [projects]: projets.html
 [blog]: #
