--- a/content/cn/resources.html
+++ b/content/cn/resources.html
@@ -1,13 +1,13 @@
 ---
-title: resources
+title: 一些资源
 keywords: 
 uuid: a77a1d1a-e7dd-4664-9f2e-1b997bfefa20
 class: main-title
 listable: false
 ---
 
----{% from "macros.j2" import listing with context %}
----{{ listing("files/pdf") }}
+{% from "macros.j2" import listing with context %}
+{{ listing("files/pdf") }}
 
 
 {# Local Variables:      #}
